fix: filtragem por Specification no GetUsersQueryHandler e ajusta repositório IGRPUserRepository